# CUDAManagedHeap

./: CHANGELOG.md  CMakeLists.txt  README.md
examples/: cudamanagedheap.cu  cudamanagedheap.cuh
tests/: test_managedheap.cu
tools/: heaputils.cuh  managedheap.cuh
